windows is a scourge on humanity

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,7 @@ elseif(WIN32)
   set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/bin/libMad${CMAKE_SHARED_LIBRARY_SUFFIX})
   set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/bin)
 endif()
+set(LIBMAD_IMPLIB ${PROJECT_BINARY_DIR}/bin/libMad.imp.lib)
 set(LIBMAD_HEADER ${PROJECT_BINARY_DIR}/include/libMad.h)
 set(LIBMAD_HEADER_PATH ${PROJECT_BINARY_DIR}/include)
 set(LIBMAD_BUNDLE_PATH ${PROJECT_BINARY_DIR}/share)
@@ -136,7 +137,6 @@ set(LIBMAD_SHARED_LIBRARY_DEPENDENCIES
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
 )
 set(LIBMAD_GENERATE_HEADERS_SCRIPT ${PROJECT_SOURCE_DIR}/scripts/generate_headers.jl)
-
 set(LIBMAD_HEADER_DEPENDENCIES
   ${PROJECT_SOURCE_DIR}/src/libMad.jl
   ${PROJECT_SOURCE_DIR}/src/utils.jl
@@ -147,6 +147,20 @@ set(LIBMAD_HEADER_DEPENDENCIES
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
   ${PROJECT_SOURCE_DIR}/scripts/generate_headers.jl
 )
+if(LINUX)
+  set(LIBMAD_JULIAC_OUTPUTS
+    ${LIBMAD_SHARED_LIBRARY}
+    ${LIBMAD_SHARED_LIBRARY_PATH}
+    ${LIBMAD_BUNDLE_PATH}
+  )
+elseif(WIN32)
+  set(LIBMAD_JULIAC_OUTPUTS
+    ${LIBMAD_SHARED_LIBRARY}
+    ${LIBMAD_IMPLIB}
+    ${LIBMAD_SHARED_LIBRARY_PATH}
+    ${LIBMAD_BUNDLE_PATH}
+  )
+endif()
 
 cmake_path(NATIVE_PATH LIBMAD_SHARED_LIBRARY LIBMAD_SHARED_LIBRARY)
 cmake_path(NATIVE_PATH LIBMAD_HEADER LIBMAD_HEADER)
@@ -156,14 +170,13 @@ cmake_path(NATIVE_PATH LIBMAD_HEADER_PATH LIBMAD_HEADER_PATH)
 cmake_path(NATIVE_PATH LIBMAD_BUNDLE_PATH LIBMAD_BUNDLE_PATH)
 cmake_path(NATIVE_PATH LIBMAD_SHARED_LIBRARY_DEPENDENCIES LIBMAD_SHARED_LIBRARY_DEPENDENCIES)
 cmake_path(NATIVE_PATH LIBMAD_HEADER_DEPENDENCIES LIBMAD_HEADER_DEPENDENCIES)
+cmake_path(NATIVE_PATH LIBMAD_JULIAC_OUTPUTS LIBMAD_JULIAC_OUTPUTS)
 message("${LIBMAD_HEADER_DEPENDENCIES}")
 message("${LIBMAD_SHARED_LIBRARY_DEPENDENCIES}")
 
 # SETUP THE BUILD
 add_custom_command(
-  OUTPUT ${LIBMAD_SHARED_LIBRARY}
-  ${LIBMAD_SHARED_LIBRARY_PATH}
-  ${LIBMAD_BUNDLE_PATH}
+  OUTPUT ${LIBMAD_JULIAC_OUTPUTS}
   COMMAND ${JULIAC_EXECUTABLE} --verbose --compile-ccallable --bundle ${PROJECT_BINARY_DIR} --experimental ${JULIAC_FLAGS} --output-lib libMad ${PROJECT_SOURCE_DIR}
   DEPENDS ${LIBMAD_SHARED_LIBRARY_DEPENDENCIES}
 )
@@ -186,7 +199,7 @@ add_dependencies(libMad libMad_target)
 set_target_properties(libMad
   PROPERTIES
   IMPORTED_LOCATION ${LIBMAD_SHARED_LIBRARY}
-  IMPORTED_IMPLIB ${LIBMAD_SHARED_LIBRARY}
+  IMPORTED_IMPLIB ${LIBMAD_IMPLIB}
   IMPORTED_SONAME libMad
 )
 set_target_properties(libMad PROPERTIES LINKER_LANGUAGE C)
