msys2 not working falling back to release build?

--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -35,6 +35,10 @@ jobs:
         julia-version: ['1']
     steps:
     - uses: actions/checkout@v4
+    - name: Configure to use mingw
+      run: |
+        echo "CC=gcc" >> $GITHUB_ENV
+        echo "CXX=g++" >> $GITHUB_ENV
     - uses: julia-actions/install-juliaup@v2
       with:
         channel: ${{ matrix.julia-version }}
@@ -43,14 +47,8 @@ jobs:
     - name: add JuliaC to path
       run: echo "PATH=$HOME\.julia\bin;$env:PATH" >> $env:GITHUB_ENV
       shell: pwsh
-    - uses: msys2/setup-msys2@v2
-      with:
-        msystem: MINGW64
-        install: gcc cmake make git
-        path-type: inherit
     - name: build libMad
-      shell: msys2 {0}
-      run: mkdir build && cd build && mkdir install && cmake .. -G "Unix Makefiles" -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target install
+      run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target INSTALL --config Release
     - name: zip output
       run: |
         cd build\install && tar.exe -czf ..\..\libMad-windows-latest.tar.gz *
