Fix windows related pain

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,10 +45,10 @@ if (JULIA_EXECUTABLE STREQUAL "julia")
       OUTPUT_VARIABLE JULIA_EXECUTABLE_PARSED
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
-    string(REGEX MATCH "(.*)\n" JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
+    string(REGEX MATCH "(.*)\n?" JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
     string(STRIP ${JULIA_EXECUTABLE_PARSED} JULIA_EXECUTABLE_PARSED)
-    message("Julia executable: ${JULIA_EXECUTABLE_PARSED}")
   endif()
+  message("Julia executable: ${JULIA_EXECUTABLE_PARSED}")
   set(JULIA_EXECUTABLE ${JULIA_EXECUTABLE_PARSED} CACHE STRING "Julia executable" FORCE)
 endif()
 message(CHECK_PASS "Check Julia Executable")
