--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -58,9 +58,9 @@ jobs:
       shell: pwsh
     - name: build libMad
       run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target INSTALL --config Release
-    -  name: tar output
+    - name: tar output
       run: |
-        cd build\install && tar.exe -czf ..\..\libMad-apple-aarch64.tar.gz *
+        cd build\install && tar.exe -czf ../../libMad-apple-aarch64.tar.gz *
     - uses: actions/upload-artifact@v4
       with:
         name: libMad-apple-aarch64
