--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,7 @@ message(CHECK_PASS "Check Juliaup Executable")
 message(CHECK_START "Check Julia Executable")
 set(JULIA_EXECUTABLE "julia" CACHE STRING "Julia exectuable default")
 if (JULIA_EXECUTABLE STREQUAL "julia")
-  if(LINUX)
+  if(LINUX OR APPLE)
     execute_process(
       COMMAND which julia
       OUTPUT_STRIP_TRAILING_WHITESPACE
@@ -45,7 +45,7 @@ if (JULIA_EXECUTABLE STREQUAL "julia")
       OUTPUT_VARIABLE JULIA_EXECUTABLE_PARSED
       WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
-    string(REGEX MATCH "(.*)\n?" JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
+    string(REGEX MATCH "(.*)\n|$" JULIA_EXECUTABLE_PARSED ${JULIA_EXECUTABLE_PARSED})
     string(STRIP ${JULIA_EXECUTABLE_PARSED} JULIA_EXECUTABLE_PARSED)
   endif()
   message("Julia executable: ${JULIA_EXECUTABLE_PARSED}")
@@ -93,7 +93,7 @@ get_filename_component(JULIA_PATH_PREFIX "${JULIA_BINDIR}" DIRECTORY)
 set(JULIA_INCLUDE_DIR ${JULIA_PATH_PREFIX}/include/julia)
 
 message(CHECK_START "Find juliac.jl")
-if(LINUX)
+if(LINUX OR APPLE)
   execute_process(
     COMMAND which juliac
     OUTPUT_STRIP_TRAILING_WHITESPACE
@@ -116,7 +116,7 @@ endif()
 file(MAKE_DIRECTORY "${CMAKE_BINARY_DIR}/include")
 
 # SETUP VARIABLES BECAUSE WINDOWS IS HORRIBLE:
-if(LINUX)
+if(LINUX OR APPLE)
   set(LIBMAD_SHARED_LIBRARY ${PROJECT_BINARY_DIR}/lib/libMad${CMAKE_SHARED_LIBRARY_SUFFIX})
   set(LIBMAD_SHARED_LIBRARY_PATH ${PROJECT_BINARY_DIR}/lib)
 elseif(WIN32)
@@ -147,7 +147,7 @@ set(LIBMAD_HEADER_DEPENDENCIES
   ${PROJECT_SOURCE_DIR}/src/nlpmodels.jl
   ${PROJECT_SOURCE_DIR}/scripts/generate_headers.jl
 )
-if(LINUX)
+if(LINUX OR APPLE)
   set(LIBMAD_JULIAC_OUTPUTS
     ${LIBMAD_SHARED_LIBRARY}
     ${LIBMAD_SHARED_LIBRARY_PATH}
