--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -54,7 +54,7 @@ jobs:
     - name: install JuliaC
       run: julia -e 'using Pkg; Pkg.add(url="https://github.com/apozharski/JuliaC.jl.git"); Pkg.Apps.add(url="https://github.com/apozharski/JuliaC.jl.git")'
     - name: add JuliaC to path
-      run: echo "PATH=$HOME\.julia\bin;$env:PATH" >> $env:GITHUB_ENV
+      run: echo "$HOME/.julia/bin" >> "$GITHUB_PATH"
     - name: build libMad
       run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target INSTALL --config Release
     - name: tar output
