why is windows weird

--- a/.github/workflows/build_dist.yml
+++ b/.github/workflows/build_dist.yml
@@ -56,7 +56,7 @@ jobs:
     - name: add JuliaC to path
       run: echo "$HOME/.julia/bin" >> "$GITHUB_PATH"
     - name: build libMad
-      run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target INSTALL --config Release
+      run: mkdir build && cd build && mkdir install && cmake .. -DCMAKE_INSTALL_PREFIX="install" && cmake --build . --target install --config Release
     - name: tar output
       run: |
         cd build\install && tar.exe -czf ../../libMad-apple-aarch64.tar.gz *
